tests/baselines/reference/for-of34.errors.txt
for-of34.ts(2,5): error TS7023: 'next' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
for-of34.ts(11,10): error TS7022: 'v' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== for-of34.ts (2 errors) ====
    class MyStringIterator {
        next() {
        ~~~~
!!! error TS7023: 'next' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
            return v;
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    for (var v of new MyStringIterator) { }
             ~
!!! error TS7022: 'v' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.